--- a/cashTurn.html
+++ b/cashTurn.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
+
     <title>财产表</title>
-    <link href="cashTurn.css" rel="stylesheet">
+    <link href="cycCashTurn.css" rel="stylesheet">
 </head>
 
 <!-- 手写版本2 -->
@@ -29,42 +30,49 @@
         <div class="table-row" id="income_statement">
             <div class="table-cell">
                 <table>
-
                     <tr>
-                        <td colspan="2">
+                        <td colspan="3">
                             <caption class="txtCenter">
-                                收入
+                                <span style="position:relative;left:14%;">收入
+                                <span style="letter-spacing:0;position:relative;right:13%;">(220,000)</span>
+                                </span>
                             </caption>
-                            <caption class="captionSubTxt2">
-                                100,000
-                            </caption>
-
                         </td>
-
                     </tr>
                     <tr>
+                        <th class="center">收入类型</th>
                         <th class="center">项目</th>
                         <th class="center">现金流</th>
                     </tr>
                     <tr>
+                        <td rowspan="3">劳动收入<br/>20,000</td>
                         <td>工资</td>
+                        <td>8,000</td>
+                    </tr>
+                    <tr>
+                        <td>公积金</td>
+                        <td>2,000</td>
+                    </tr>
+                    <tr>
+                        <td>财商销售</td>
                         <td>10,000</td>
                     </tr>
                     <tr>
+                        <td rowspan="4" class="center">被动收入<br/>200,000</td>
                         <td>利息</td>
-                        <td>5,000</td>
+                        <td>20,000</td>
                     </tr>
                     <tr>
                         <td>股利</td>
-                        <td>15,000</td>
+                        <td>30,000</td>
                     </tr>
                     <tr>
                         <td>房地产</td>
-                        <td>10,000</td>
+                        <td>50,000</td>
                     </tr>
                     <tr>
                         <td>企业投资</td>
-                        <td>10,000</td>
+                        <td>100,000</td>
                     </tr>
                 </table>
             </div>
@@ -75,18 +83,18 @@
                             <em class="em_150">净被动收入:</em>
                         </div>
                         <div class="table-cell em_150 width_full border_bottom_2px txtCenter">
-                            80,000
+                            190,000
                         </div>
                     </div>
                     <span style="float:right">
-                             (被动收入 - 生成总支出)
+                             (被动收入 - 财务支出)
                      </span>
                     <div class="table-row">
                         <div class="table-cell right">
                             <em class="em_150">生活总支出:</em>
                         </div>
                         <div class="table-cell em_150 width_full border_bottom_2px txtCenter">
-                            20,000
+                            100,000
                         </div>
                     </div>
                     <span style="float:right">
@@ -97,7 +105,7 @@
                             <em class="em_150">财务自由度:</em>
                         </div>
                         <div class="table-cell em_150 width_full border_bottom_2px txtCenter">
-                            400%
+                            190%
                         </div>
                     </div>
                     <div class="table-row">
@@ -113,7 +121,7 @@
                             <em class="em_150">净资产收益率:</em>
                         </div>
                         <div class="table-cell em_150 width_full border_bottom_2px txtCenter">
-                            8%
+                            19%
                         </div>
                     </div>
 
@@ -123,7 +131,7 @@
                             <em class="em_150">月现金流:</em>
                         </div>
                         <div class="table-cell em_150 width_full border_bottom_2px txtCenter">
-                            120,000
+                            110,000
                         </div>
                     </div>
                     <span style="float:right">
@@ -135,46 +143,58 @@
         <div class="table-row" id="expenses_statement">
             <div class="table-cell">
                 <table>
-                    <caption class="txtCenter">支出</caption>
                     <tr>
-                        <td>税金</td>
-                        <td>910</td>
+                        <td colspan="3">
+                            <caption class="txtCenter">
+                                <span style="position:relative;left:14%;">支出
+                                <span style="letter-spacing:0;position:relative;right:13%;">(110,000)</span>
+                                </span>
+                            </caption>
+                        </td>
                     </tr>
                     <tr>
-                        <td>住房按揭付款</td>
-                        <td>700</td>
+                        <th class="center">支出大类</th>
+                        <th class="center">项目</th>
+                        <th class="center">现金流</th>
                     </tr>
                     <tr>
-                        <td>教育付款</td>
-                        <td>60</td>
+                        <td rowspan="2">财务</td>
+                        <td>信用贷款利息</td>
+                        <td>5,000</td>
                     </tr>
                     <tr>
-                        <td>购车付款</td>
-                        <td>120</td>
+                        <td>出租房中介费</td>
+                        <td>5,000</td>
                     </tr>
                     <tr>
-                        <td>信用卡支出</td>
-                        <td>90</td>
+                        <td rowspan="1">梦想</td>
+                        <td>梦想</td>
+                        <td>10,000</td>
                     </tr>
                     <tr>
-                        <td>额外支出</td>
-                        <td>50</td>
+                        <td rowspan="1">健康</td>
+                        <td>梦想</td>
+                        <td>10,000</td>
                     </tr>
                     <tr>
-                        <td>其他支出</td>
-                        <td>1000</td>
+                        <td rowspan="1">成长</td>
+                        <td>梦想</td>
+                        <td>10,000</td>
                     </tr>
                     <tr>
-                        <td>孩子支出</td>
-                        <td></td>
+                        <td rowspan="1">日常</td>
+                        <td>梦想</td>
+                        <td>10,000</td>
                     </tr>
                     <tr>
-                        <td>银行付款支出</td>
-                        <td></td>
+                        <td rowspan="1">家庭</td>
+                        <td>梦想</td>
+                        <td>50,000</td>
                     </tr>
-                    <tr class="noAfter">
-                        <td></td>
-                        <td></td>
+                    <tr>
+                        <td rowspan="1">人脉</td>
+                        <td>梦想</td>
+                        <td>10,000</td>
                     </tr>
                 </table>
             </div>
@@ -198,7 +218,8 @@
             <div class="table-cell padding_1 border_bottom_2px border_left_2px">
                 <table class="border_none border_td_bottom">
                     <tr>
-                        <td colspan="3">银行存款</td>
+                        <td>银行存款</td>
+                        <td colspan="2" style="text-align: left;position: relative;right: 35%">1,000,000</td>
                     </tr>
                     <tr class="noAfter">
                         <td>股票 / 基金 / 存单</td>
