--- a/cashTurn.html
+++ b/cashTurn.html
@@ -76,7 +76,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="table-cell">
+            <div class="table-cell colonTb">
                 <div class="table border_top_2px">
                     <div class="table-row">
                         <div class="table-cell right">
@@ -140,8 +140,8 @@
                 </div>
             </div>
         </div>
-        <div class="table-row" id="expenses_statement">
-            <div class="table-cell">
+        <div class="table-row">
+            <div class="table-cell" id="expenses_statement">
                 <table>
                     <tr>
                         <td colspan="3">
@@ -198,11 +198,178 @@
                     </tr>
                 </table>
             </div>
+            <div class="table-cell">
+                <table id="ratCircleTable">
+                    <tr>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="card extraExpense">
+                            <div>
+                                <span class="">额外支出</span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="card charity">
+                            <div>
+                                <span class="">慈善事业</span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="card payday">
+                            <div>
+                                <span class="">银行结算日</span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="card market">
+                            <div>
+                                <span class="">市场风云</span>
+                            </div>
+                        </td>
+                        <td class="empty" colspan="5">
+                            <div>
+                                <span class=""></span>
+                            </div>
+                        </td>
+                        <td class="card market">
+                            <div>
+                                <span class="">市场风云</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="empty" colspan="5">
+                            <div>
+                                <span class=""></span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="card payday">
+                            <div>
+                                <span class="">银行结算日</span>
+                            </div>
+                        </td>
+                        <td class="empty" colspan="5">
+                            <div>
+                                <span class=""></span>
+                            </div>
+                        </td>
+                        <td class="card extraExpense">
+                            <div>
+                                <span class="">额外支出</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="empty" colspan="5">
+                            <div>
+                                <span class=""></span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="card unemployed">
+                            <div>
+                                <span class="">失业</span>
+                            </div>
+                        </td>
+                        <td class="empty" colspan="5">
+                            <div>
+                                <span class=""></span>
+                            </div>
+                        </td>
+                        <td class="card child">
+                            <div>
+                                <span class="">孩子</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="card extraExpense">
+                            <div>
+                                <span class="">额外支出</span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="card market">
+                            <div>
+                                <span class="">市场风云</span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                        <td class="card payday">
+                            <div>
+                                <span class="">银行结算日</span>
+                            </div>
+                        </td>
+                        <td class="card opportunity">
+                            <div>
+                                <span class="">机会</span>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <img class="dice" src="dice.png">
+                </img>
+            </div>
+
+
         </div>
     </div>
 
     <!-- 表格2:3)资产负债表 -->
-    <div class="table space_0 width_cut12px">
+    <div class="table space_0 width_cut12px colonTb">
         <!-- 第2行:表头2 -->
         <div class="table-row">
             <div class="table-cell like_caption reportTitle">
@@ -213,7 +380,7 @@
             </div>
         </div>
         <!-- 第3行 -->
-        <div class="table-row">
+        <div class="table-row" style="width:10px">
             <!-- Assets,财产记录:股票、房产等 -->
             <div class="table-cell padding_1 border_bottom_2px border_left_2px">
                 <table class="border_none border_td_bottom">
